--- a/changelog
+++ b/changelog
@@ -1,3 +1,9 @@
+qmpdclient (1.1.3-1) unstable; urgency=low
+
+  * New upstream release
+
+ -- Voker57 <voker57@gmail.com>  Mon, 10 May 2010 01:11:00 +0300
+
 qmpdclient (1.1.2-1) unstable; urgency=low
 
   * Updated sources, build system changed to CMake
